// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HoverCard /> should renders correctly 1`] = `
<HoverCard
  controlRef={
    Object {
      "current": Object {
        "hide": [Function],
        "show": [Function],
      },
    }
  }
  onFavoriteClick={[MockFunction]}
  onQuickViewClick={[MockFunction]}
>
  <ForwardRef
    className="card hidden"
    inCartControl={
      Object {
        "onAdd": [Function],
        "onChange": [Function],
        "onSubtract": [Function],
      }
    }
    onMouseLeave={[Function]}
    productInfo={
      Object {
        "onFavoriteClick": [Function],
        "onQuickViewClick": [Function],
      }
    }
  >
    <div
      className="root rounds-md__all shadow-z4 card hidden"
      onMouseLeave={[Function]}
    >
      <ProductInfo
        onFavoriteClick={[Function]}
        onQuickViewClick={[Function]}
        withImageButtons={true}
      >
        <a
          className="row image-row"
        >
          <Image
            className="image"
          >
            <div
              className="root image"
            >
              <img />
            </div>
          </Image>
          <WithHint
            text="Добавить в избранное"
          >
            <ForwardRef
              className="on-image-btn wish"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgHeart)
                className="button on-image-btn wish"
                data-testid="favorite-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Добавить в избранное"
                width={24}
              >
                <svg
                  className="button on-image-btn wish"
                  data-testid="favorite-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Добавить в избранное"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.944 3.6h-.001c-2.7-1.879-5.978-1.165-7.943.793-1.964-1.958-5.241-2.683-7.943-.792C2.524 4.673 1.57 6.473 1.504 8.369c-.075 2.145.826 4.042 2.36 5.985 1.512 1.912 3.685 3.927 6.261 6.315l.086.08h.002l.098.091a2.466 2.466 0 003.371-.012l.107-.1.027-.025c2.602-2.407 4.795-4.436 6.316-6.361 1.534-1.941 2.435-3.838 2.364-5.982v-.001c-.065-1.886-1.02-3.686-2.552-4.758zM12 18.274c-2.278-2.105-4.14-3.84-5.45-5.401-1.358-1.62-2.047-2.968-2.047-4.261 0-1.774 1.285-3.07 2.999-3.07 1.055 0 2.103.553 2.72 1.39.38.516.996 1.017 1.78 1.017.789 0 1.406-.507 1.787-1.025.612-.831 1.657-1.382 2.71-1.382 1.713 0 2.998 1.296 2.998 3.07 0 1.293-.689 2.641-2.047 4.26-1.309 1.561-3.171 3.296-5.45 5.402z"
                  />
                </svg>
              </ForwardRef(SvgHeart)>
            </ForwardRef>
          </WithHint>
          <WithHint
            text="Быстрый просмотр"
          >
            <ForwardRef
              className="on-image-btn quick-view"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgQuickView)
                className="root on-image-btn quick-view"
                data-testid="quick-view-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Быстрый просмотр"
                width={24}
              >
                <svg
                  className="root on-image-btn quick-view"
                  data-testid="quick-view-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Быстрый просмотр"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0111.5 20.5a9 9 0 119-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 01-2.122 2.122zM9 10h1V9a1.5 1.5 0 113 0v1h1a1.5 1.5 0 110 3h-1v1a1.5 1.5 0 11-3 0v-1H9a1.5 1.5 0 110-3zm2.5-4.5a6 6 0 100 12 6 6 0 000-12z"
                  />
                </svg>
              </ForwardRef(SvgQuickView)>
            </ForwardRef>
          </WithHint>
        </a>
        <ForwardRef(Link)
          className="row link"
          color="gray87"
        >
          <a
            className="link row link color__gray87 hover-color__gray54"
          />
        </ForwardRef(Link)>
      </ProductInfo>
      <div
        className="control-wrapper"
      >
        <InCartControl
          className="control"
          onAdd={[Function]}
          onChange={[Function]}
          onSubtract={[Function]}
        >
          <ForwardRef(Button)
            className="control control"
            onClick={[Function]}
            size="small"
          >
            <button
              className="control control button-base button-primary button-small text-button-small"
              onClick={[Function]}
            >
              В корзину
            </button>
          </ForwardRef(Button)>
        </InCartControl>
      </div>
    </div>
  </ForwardRef>
</HoverCard>
`;

exports[`<HoverCard /> should set control to ref 1`] = `
<HoverCard
  controlRef={
    Object {
      "current": Object {
        "hide": [Function],
        "show": [Function],
      },
    }
  }
>
  <ForwardRef
    className="card hidden"
    inCartControl={
      Object {
        "onAdd": [Function],
        "onChange": [Function],
        "onSubtract": [Function],
      }
    }
    onMouseLeave={[Function]}
    productInfo={
      Object {
        "onFavoriteClick": [Function],
        "onQuickViewClick": [Function],
      }
    }
  >
    <div
      className="root rounds-md__all shadow-z4 card hidden"
      onMouseLeave={[Function]}
    >
      <ProductInfo
        onFavoriteClick={[Function]}
        onQuickViewClick={[Function]}
        withImageButtons={true}
      >
        <a
          className="row image-row"
        >
          <Image
            className="image"
          >
            <div
              className="root image"
            >
              <img />
            </div>
          </Image>
          <WithHint
            text="Добавить в избранное"
          >
            <ForwardRef
              className="on-image-btn wish"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgHeart)
                className="button on-image-btn wish"
                data-testid="favorite-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Добавить в избранное"
                width={24}
              >
                <svg
                  className="button on-image-btn wish"
                  data-testid="favorite-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Добавить в избранное"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.944 3.6h-.001c-2.7-1.879-5.978-1.165-7.943.793-1.964-1.958-5.241-2.683-7.943-.792C2.524 4.673 1.57 6.473 1.504 8.369c-.075 2.145.826 4.042 2.36 5.985 1.512 1.912 3.685 3.927 6.261 6.315l.086.08h.002l.098.091a2.466 2.466 0 003.371-.012l.107-.1.027-.025c2.602-2.407 4.795-4.436 6.316-6.361 1.534-1.941 2.435-3.838 2.364-5.982v-.001c-.065-1.886-1.02-3.686-2.552-4.758zM12 18.274c-2.278-2.105-4.14-3.84-5.45-5.401-1.358-1.62-2.047-2.968-2.047-4.261 0-1.774 1.285-3.07 2.999-3.07 1.055 0 2.103.553 2.72 1.39.38.516.996 1.017 1.78 1.017.789 0 1.406-.507 1.787-1.025.612-.831 1.657-1.382 2.71-1.382 1.713 0 2.998 1.296 2.998 3.07 0 1.293-.689 2.641-2.047 4.26-1.309 1.561-3.171 3.296-5.45 5.402z"
                  />
                </svg>
              </ForwardRef(SvgHeart)>
            </ForwardRef>
          </WithHint>
          <WithHint
            text="Быстрый просмотр"
          >
            <ForwardRef
              className="on-image-btn quick-view"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgQuickView)
                className="root on-image-btn quick-view"
                data-testid="quick-view-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Быстрый просмотр"
                width={24}
              >
                <svg
                  className="root on-image-btn quick-view"
                  data-testid="quick-view-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Быстрый просмотр"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0111.5 20.5a9 9 0 119-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 01-2.122 2.122zM9 10h1V9a1.5 1.5 0 113 0v1h1a1.5 1.5 0 110 3h-1v1a1.5 1.5 0 11-3 0v-1H9a1.5 1.5 0 110-3zm2.5-4.5a6 6 0 100 12 6 6 0 000-12z"
                  />
                </svg>
              </ForwardRef(SvgQuickView)>
            </ForwardRef>
          </WithHint>
        </a>
        <ForwardRef(Link)
          className="row link"
          color="gray87"
        >
          <a
            className="link row link color__gray87 hover-color__gray54"
          />
        </ForwardRef(Link)>
      </ProductInfo>
      <div
        className="control-wrapper"
      >
        <InCartControl
          className="control"
          onAdd={[Function]}
          onChange={[Function]}
          onSubtract={[Function]}
        >
          <ForwardRef(Button)
            className="control control"
            onClick={[Function]}
            size="small"
          >
            <button
              className="control control button-base button-primary button-small text-button-small"
              onClick={[Function]}
            >
              В корзину
            </button>
          </ForwardRef(Button)>
        </InCartControl>
      </div>
    </div>
  </ForwardRef>
</HoverCard>
`;

exports[`<HoverCard /> should set control to ref 2`] = `
<HoverCard
  controlRef={
    Object {
      "current": Object {
        "hide": [Function],
        "show": [Function],
      },
    }
  }
>
  <ForwardRef
    className="card hidden"
    inCartControl={
      Object {
        "markupText": "Комплектация + 50 ₽ при покупке до 20 шт",
        "onAdd": [Function],
        "onChange": [Function],
        "onSubtract": [Function],
      }
    }
    onMouseLeave={[Function]}
    productInfo={
      Object {
        "currencyGrapheme": "₽",
        "favorite": false,
        "imageSrc": "https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v: 1617955476",
        "name": "Ножницы портновские, 10, 26 см, цвет чёрный",
        "oldPrice": 250,
        "onFavoriteClick": [Function],
        "onQuickViewClick": [Function],
        "price": 225,
        "url": "https://www.sima-land.ru/123456",
        "withImageButtons": true,
      }
    }
  >
    <div
      className="root rounds-md__all shadow-z4 card hidden"
      onMouseLeave={[Function]}
    >
      <ProductInfo
        currencyGrapheme="₽"
        favorite={false}
        imageSrc="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v: 1617955476"
        name="Ножницы портновские, 10, 26 см, цвет чёрный"
        oldPrice={250}
        onFavoriteClick={[Function]}
        onQuickViewClick={[Function]}
        price={225}
        url="https://www.sima-land.ru/123456"
        withImageButtons={true}
      >
        <a
          className="row image-row"
          href="https://www.sima-land.ru/123456"
        >
          <Image
            alt="Ножницы портновские, 10, 26 см, цвет чёрный"
            className="image"
            src="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v: 1617955476"
          >
            <div
              className="root image"
            >
              <img
                alt="Ножницы портновские, 10, 26 см, цвет чёрный"
                src="https://cdn3.static1-sima-land.com/items/29455/0/1600.jpg?v: 1617955476"
              />
            </div>
          </Image>
          <WithHint
            text="Добавить в избранное"
          >
            <ForwardRef
              checked={false}
              className="on-image-btn wish"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgHeart)
                className="button on-image-btn wish"
                data-testid="favorite-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Добавить в избранное"
                width={24}
              >
                <svg
                  className="button on-image-btn wish"
                  data-testid="favorite-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Добавить в избранное"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.944 3.6h-.001c-2.7-1.879-5.978-1.165-7.943.793-1.964-1.958-5.241-2.683-7.943-.792C2.524 4.673 1.57 6.473 1.504 8.369c-.075 2.145.826 4.042 2.36 5.985 1.512 1.912 3.685 3.927 6.261 6.315l.086.08h.002l.098.091a2.466 2.466 0 003.371-.012l.107-.1.027-.025c2.602-2.407 4.795-4.436 6.316-6.361 1.534-1.941 2.435-3.838 2.364-5.982v-.001c-.065-1.886-1.02-3.686-2.552-4.758zM12 18.274c-2.278-2.105-4.14-3.84-5.45-5.401-1.358-1.62-2.047-2.968-2.047-4.261 0-1.774 1.285-3.07 2.999-3.07 1.055 0 2.103.553 2.72 1.39.38.516.996 1.017 1.78 1.017.789 0 1.406-.507 1.787-1.025.612-.831 1.657-1.382 2.71-1.382 1.713 0 2.998 1.296 2.998 3.07 0 1.293-.689 2.641-2.047 4.26-1.309 1.561-3.171 3.296-5.45 5.402z"
                  />
                </svg>
              </ForwardRef(SvgHeart)>
            </ForwardRef>
          </WithHint>
          <WithHint
            text="Быстрый просмотр"
          >
            <ForwardRef
              className="on-image-btn quick-view"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <ForwardRef(SvgQuickView)
                className="root on-image-btn quick-view"
                data-testid="quick-view-button"
                height={24}
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                title="Быстрый просмотр"
                width={24}
              >
                <svg
                  className="root on-image-btn quick-view"
                  data-testid="quick-view-button"
                  height={24}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  title="Быстрый просмотр"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0111.5 20.5a9 9 0 119-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 01-2.122 2.122zM9 10h1V9a1.5 1.5 0 113 0v1h1a1.5 1.5 0 110 3h-1v1a1.5 1.5 0 11-3 0v-1H9a1.5 1.5 0 110-3zm2.5-4.5a6 6 0 100 12 6 6 0 000-12z"
                  />
                </svg>
              </ForwardRef(SvgQuickView)>
            </ForwardRef>
          </WithHint>
        </a>
        <div
          className="row prices-row"
        >
          <Price
            className="price"
            currencyGrapheme="₽"
            value={225}
          >
            <span
              className="root price"
            >
              225 ₽
            </span>
          </Price>
          <Price
            className="old-price"
            crossedOut={true}
            currencyGrapheme="₽"
            value={250}
          >
            <span
              className="root old-price crossed-out"
            >
              250 ₽
            </span>
          </Price>
        </div>
        <ForwardRef(Link)
          className="row link"
          color="gray87"
          href="https://www.sima-land.ru/123456"
        >
          <a
            className="link row link color__gray87 hover-color__gray54"
            href="https://www.sima-land.ru/123456"
          >
            Ножницы портновские, 10, 26 см, цвет чёрный
          </a>
        </ForwardRef(Link)>
      </ProductInfo>
      <div
        className="control-wrapper"
      >
        <InCartControl
          className="control"
          markupText="Комплектация + 50 ₽ при покупке до 20 шт"
          onAdd={[Function]}
          onChange={[Function]}
          onSubtract={[Function]}
        >
          <ForwardRef(Button)
            className="control control"
            onClick={[Function]}
            size="small"
          >
            <button
              className="control control button-base button-primary button-small text-button-small"
              onClick={[Function]}
            >
              В корзину
            </button>
          </ForwardRef(Button)>
        </InCartControl>
        <div
          className="bottom-text"
        >
          Комплектация + 50 ₽ при покупке до 20 шт
        </div>
      </div>
    </div>
  </ForwardRef>
</HoverCard>
`;
